--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
+.container{
+    max-width: 200px; 
+    background-color: purple;
+    border-left: 5px solid green;
+    padding: 10px;
+    font: 20px;
+    color: white;
 
+
+}
 /* Your CSS Code here. */
+
+
+
+
+/* max-width: 600px;  
+margin: 10px;
+ padding: 15px; 
+ border-left: 8px solid green;
+ background-color: #f8fffeb;
+ font-weight: bold;*/
