--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
     width: 200px;
     background-color: purple;
     border-left: 5px solid green;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
+}
+#heading{
     font-size: 20px;
     color: white;
 }
